fix: Auth aware icon not showing up on navbar

--- a/src/index.css
+++ b/src/index.css
@@ -4,32 +4,25 @@ body {
   font-family: sans-serif;
   color: #252525;
 }
-
-.avatar {
-  height: 40px;
-  border-radius: 20px;
-  margin: 10px;
-  vertical-align: middle;
-}
-
-.avatar-name {
-  font-weight: bold;
-}
-
-.nav-container {
-;
-}
-
-.nav-links {
+.App{
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  margin-top: 30px;
 
 }
 
+.form-title
 .form-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  height: 400px;
+  height: 500px;
+  border: solid black;
+  text-align: center;
+  width: 30%;
+
 }
 
 .question-form {
